@@ -8,6 +8,7 @@ Date: ????
     - Move the biolab's one off grid a bit
     - Store the cb proxy on the struct
     - Support circuit wires
+    - Add initial circuit connection gui
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 02. 28
